--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+package.json
+package-lock.json
+.gitignore
 node_modules
 dist
 dist-ssr
